--- a/extension/manifest2.json
+++ b/extension/manifest2.json
@@ -1,11 +1,13 @@
 {
     "manifest_version": 2,
     "name": "Tab Guardian",
-    "version": "1.0.0",
-    "web_accessible_resources": [
-        "images/*"
-    ],
     "description": "Browser extension that allows you to save and restore your tabs including encrypting them with a password",
+    "permissions": ["storage"],
+    "version": "0.1.0",
+    "web_accessible_resources": [
+        "images/*",
+        "popup.js"
+    ],
     "icons": {
         "48": "images/icon-48.png",
         "32": "images/icon-32.png",
@@ -14,19 +16,9 @@
     },
     "browser_action": {
 		"default_icon": "images/icon-48.png",
-		"default_title": "Tab Guardian"
+		"default_title": "Tab Guardian",
+        "default_popup": "popup.html"
     },
-    "content_scripts": [
-        {
-            "matches": ["*://*"],
-            "css": ["main.css"],
-            "run_at": "document_start"
-        },
-        {
-            "matches": ["*://*"],
-            "js": ["main.js"]
-        }
-    ],
     "background": {
         "scripts": ["background.js"]
     }
