--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "tab-guardian",
-    "version": "1.0.0",
+    "version": "0.1.0",
     "description": "Browser extension that allows you to save and restore your tabs including encrypting them with a password",
     "main": "main.js",
     "scripts": {
@@ -24,11 +24,15 @@
         "jest": "^29.7.0",
         "laravel-mix": "^6.0.0",
         "prettier": "^3.2.5",
-        "sass": "^1.25.0",
-        "sass-loader": "^7.3.1",
+        "sass": "^1.76.0",
+        "sass-loader": "^14.2.1",
         "ts-jest": "^29.1.2",
         "ts-loader": "^6.2.1",
-        "typescript": "^5.0.0"
+        "typescript": "^5.0.0",
+        "vue-loader": "^17.4.2"
     },
-    "author": "Serhii Cho"
+    "author": "Serhii Cho",
+    "dependencies": {
+        "vue": "^3.4.26"
+    }
 }
