--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,21 +1,34 @@
 {
     "compilerOptions": {
-        /* Basic Options */
-        "target": "es6",
-        "module": "commonjs",
-        "sourceMap": true,
-        "removeComments": true,
-        "noEmitOnError": true,
-
-        /* Strict Type-Checking Options */
-        "strict": true,
-        "baseUrl": "./src/ts",
-        "paths": {
-            "@/*": ["*"]
-        },
-        "esModuleInterop": true,
-
-        /* Advanced Options */
-        "forceConsistentCasingInFileNames": true
-    }
-}
+      "target": "es5",
+      "module": "esnext",
+      "strict": true,
+      "jsx": "preserve",
+      "importHelpers": true,
+      "moduleResolution": "node",
+      "skipLibCheck": true,
+      "esModuleInterop": true,
+      "allowSyntheticDefaultImports": true,
+      "sourceMap": true,
+      "baseUrl": ".",
+      "paths": {
+        "@/*": [
+          "src/ts/*"
+        ]
+      },
+      "lib": [
+        "esnext",
+        "dom",
+        "dom.iterable",
+        "scripthost"
+      ]
+    },
+    "include": [
+      "src/**/*.ts",
+      "src/**/*.vue",
+      "tests/**/*.ts"
+    ],
+    "exclude": [
+      "node_modules"
+    ]
+  }
