--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "dev": "npm run development",
         "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "watch": "npm run development -- --watch",
+        "watch": "mix watch",
         "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
         "prod": "npm run production",
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --config=node_modules/laravel-mix/setup/webpack.config.js",
@@ -16,19 +16,19 @@
     },
     "devDependencies": {
         "@jest/globals": "^29.7.0",
-        "@types/chrome": "^0.0.266",
+        "@types/chrome": "^0.0.267",
         "@types/firefox-webext-browser": "^120.0.3",
-        "browser-sync": "^2.24.1",
-        "browser-sync-webpack-plugin": "^2.0.1",
-        "cross-env": "^5.1",
+        "browser-sync": "^3.0.2",
+        "browser-sync-webpack-plugin": "^2.3.0",
+        "cross-env": "^7.0.3",
         "jest": "^29.7.0",
         "laravel-mix": "^6.0.0",
         "prettier": "^3.2.5",
         "sass": "^1.76.0",
         "sass-loader": "^14.2.1",
         "ts-jest": "^29.1.2",
-        "ts-loader": "^6.2.1",
-        "typescript": "^5.0.0",
+        "ts-loader": "^9.5.1",
+        "typescript": "^5.4.5",
         "vue-loader": "^17.4.2"
     },
     "author": "Serhii Cho",
