--- a/package.json
+++ b/package.json
@@ -4,12 +4,8 @@
     "description": "Browser extension that allows you to save and restore your tabs including encrypting them with a password",
     "main": "main.js",
     "scripts": {
-        "dev": "npm run development",
-        "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "watch": "mix watch",
-        "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "prod": "npm run production",
-        "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --config=node_modules/laravel-mix/setup/webpack.config.js",
+        "dev": "vite",
+        "build": "vite build",
         "test": "jest",
         "prettier": "prettier ./src --write",
         "prettier-check": "prettier ./src --check"
@@ -18,18 +14,12 @@
         "@jest/globals": "^29.7.0",
         "@types/chrome": "^0.0.267",
         "@types/firefox-webext-browser": "^120.0.3",
-        "browser-sync": "^3.0.2",
-        "browser-sync-webpack-plugin": "^2.3.0",
-        "cross-env": "^7.0.3",
+        "@vitejs/plugin-vue": "^5.0.4",
         "jest": "^29.7.0",
-        "laravel-mix": "^6.0.0",
         "prettier": "^3.2.5",
-        "sass": "^1.76.0",
-        "sass-loader": "^14.2.1",
         "ts-jest": "^29.1.2",
-        "ts-loader": "^9.5.1",
         "typescript": "^5.4.5",
-        "vue-loader": "^17.4.2"
+        "vite": "^5.2.11"
     },
     "author": "Serhii Cho",
     "dependencies": {
