--- a/public/manifest2.json
+++ b/public/manifest2.json
@@ -1,14 +1,12 @@
 {
-    "manifest_version": 3,
+    "manifest_version": 2,
     "name": "Tab Guardian",
     "description": "Browser extension that allows you to save and restore your tabs including encrypting them with a password",
     "permissions": ["storage"],
     "version": "0.1.0",
     "web_accessible_resources": [
-        {
-            "resources": ["images/*", "background.js", "popup.js"],
-            "matches": ["<all_urls>"]
-        }
+        "images/*",
+        "popup.js"
     ],
     "icons": {
         "48": "images/icon-48.png",
@@ -16,12 +14,12 @@
         "64": "images/icon-64.png",
         "128": "images/icon-128.png"
     },
-    "action": {
+    "browser_action": {
 		"default_icon": "images/icon-128.png",
 		"default_title": "Tab Guardian",
         "default_popup": "popup.html"
     },
     "background": {
-        "service_worker": "background.js"
+        "scripts": ["background.js"]
     }
 }
