--- a/package.json
+++ b/package.json
@@ -28,11 +28,11 @@
         "prettier": "^3.2.5",
         "ts-jest": "^29.1.2",
         "typescript": "^5.4.5",
-        "vite": "^5.2.11",
-        "vuex": "^4.1.0"
+        "vite": "^5.2.11"
     },
     "author": "Serhii Cho",
     "dependencies": {
+        "pinia": "^2.1.7",
         "vue": "^3.4.26"
     }
 }
