--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "@vitejs/plugin-vue": "^5.0.4",
         "jest": "^29.7.0",
         "prettier": "^3.2.5",
+        "sass": "^1.76.0",
         "ts-jest": "^29.1.2",
         "typescript": "^5.4.5",
         "vite": "^5.2.11"
