--- a/public/manifest.json
+++ b/public/manifest.json
@@ -6,18 +6,28 @@
     "version": "0.1.0",
     "web_accessible_resources": [
         {
-            "resources": ["images/*", "background.js", "assets/*"],
+            "resources": ["icons/*", "background.js", "assets/*", "content.js"],
             "matches": ["<all_urls>"]
         }
     ],
     "icons": {
-        "48": "images/icon-48.png",
-        "32": "images/icon-32.png",
-        "64": "images/icon-64.png",
-        "128": "images/icon-128.png"
+        "48": "icons/icon-48.png",
+        "32": "icons/icon-32.png",
+        "64": "icons/icon-64.png",
+        "128": "icons/icon-128.png"
     },
+    "content_scripts": [
+        {
+            "matches": ["*://*/*"],
+            "js": ["content.js"],
+            "run_at": "document_start"
+        }
+    ],
     "action": {
-		"default_icon": "images/icon-128.png",
+		"default_icon": {
+            "64": "icons/icon-64.png",
+            "32": "icons/icon-32.png"
+        },
 		"default_title": "Tab Guardian",
         "default_popup": "index.html"
     },
