--- a/public/manifest2.json
+++ b/public/manifest2.json
@@ -5,17 +5,17 @@
     "permissions": ["storage", "tabs"],
     "version": "0.1.0",
     "web_accessible_resources": [
-        "images/*",
+        "icons/*",
         "popup.js"
     ],
     "icons": {
-        "48": "images/icon-48.png",
-        "32": "images/icon-32.png",
-        "64": "images/icon-64.png",
-        "128": "images/icon-128.png"
+        "48": "icons/icon-48.png",
+        "32": "icons/icon-32.png",
+        "64": "icons/icon-64.png",
+        "128": "icons/icon-128.png"
     },
     "browser_action": {
-		"default_icon": "images/icon-128.png",
+		"default_icon": "icons/icon-128.png",
 		"default_title": "Tab Guardian",
         "default_popup": "popup.html"
     },
