--- a/public/manifest2.json
+++ b/public/manifest2.json
@@ -18,7 +18,7 @@
             "16": "icons/icon-16-dark.png"
         },
 		"default_title": "Tab Guardian",
-        "default_popup": "popup.html",
+        "default_popup": "index.html",
         "theme_icons": [
             {
                 "light": "icons/icon-16-light.png",
