--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     },
     "author": "Serhii Cho",
     "dependencies": {
+        "@types/crypto-js": "^4.2.2",
+        "crypto-js": "^4.2.0",
         "pinia": "^2.1.7",
         "vue": "^3.4.26"
     }
