--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "devDependencies": {
         "@types/chrome": "^0.0.267",
         "@types/firefox-webext-browser": "^120.0.3",
+        "@types/toastify-js": "^1.12.3",
         "@vitejs/plugin-vue": "^5.0.4",
         "prettier": "^3.2.5",
         "sass": "^1.76.0",
@@ -33,6 +34,7 @@
         "@types/crypto-js": "^4.2.2",
         "crypto-js": "^4.2.0",
         "pinia": "^2.1.7",
+        "toastify-js": "^1.12.0",
         "vue": "^3.4.26",
         "vue-router": "4"
     }
