--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "@types/crypto-js": "^4.2.2",
         "crypto-js": "^4.2.0",
         "pinia": "^2.1.7",
+        "primevue": "^3.52.0",
         "toastify-js": "^1.12.0",
         "vue": "^3.4.26",
         "vue-router": "4"
