--- a/package.json
+++ b/package.json
@@ -24,8 +24,11 @@
         "@types/firefox-webext-browser": "^120.0.3",
         "@types/toastify-js": "^1.12.3",
         "@vitejs/plugin-vue": "^5.0.4",
+        "autoprefixer": "^10.4.19",
+        "postcss": "^8.4.38",
         "prettier": "^3.2.5",
         "sass": "^1.76.0",
+        "tailwindcss": "^3.4.3",
         "typescript": "^5.4.5",
         "vite": "^5.2.11"
     },
@@ -34,7 +37,6 @@
         "@types/crypto-js": "^4.2.2",
         "crypto-js": "^4.2.0",
         "pinia": "^2.1.7",
-        "primevue": "^3.52.0",
         "toastify-js": "^1.12.0",
         "vue": "^3.4.26",
         "vue-router": "4"
