--- a/public/manifest.json
+++ b/public/manifest.json
@@ -11,16 +11,16 @@
         }
     ],
     "icons": {
-        "16": "icons/icon-16-dark.png",
-        "32": "icons/icon-32-dark.png",
-        "48": "icons/icon-48-dark.png",
-        "64": "icons/icon-64-dark.png",
-        "128": "icons/icon-128-dark.png"
+        "16": "icons/icon-16.png",
+        "32": "icons/icon-32.png",
+        "48": "icons/icon-48.png",
+        "64": "icons/icon-64.png",
+        "128": "icons/icon-128.png"
     },
     "action": {
 		"default_icon": {
-            "32": "icons/icon-32-dark.png",
-            "16": "icons/icon-16-dark.png"
+            "32": "icons/icon-32.png",
+            "16": "icons/icon-16.png"
         },
 		"default_title": "Tab Guardian",
         "default_popup": "index.html"
