--- a/public/manifest2.json
+++ b/public/manifest2.json
@@ -6,31 +6,19 @@
     "version": "0.1.0",
     "web_accessible_resources": ["icons/*", "assets/*"],
     "icons": {
-        "16": "icons/icon-16-dark.png",
-        "32": "icons/icon-32-dark.png",
-        "48": "icons/icon-48-dark.png",
-        "64": "icons/icon-64-dark.png",
-        "128": "icons/icon-128-dark.png"
+        "16": "icons/icon-16.png",
+        "32": "icons/icon-32.png",
+        "48": "icons/icon-48.png",
+        "64": "icons/icon-64.png",
+        "128": "icons/icon-128.png"
     },
     "browser_action": {
 		"default_icon": {
-            "32": "icons/icon-32-dark.png",
-            "16": "icons/icon-16-dark.png"
+            "32": "icons/icon-32.png",
+            "16": "icons/icon-16.png"
         },
 		"default_title": "Tab Guardian",
-        "default_popup": "index.html",
-        "theme_icons": [
-            {
-                "light": "icons/icon-16-light.png",
-                "dark": "icons/icon-16-dark.png",
-                "size": 16
-            },
-            {
-                "light": "icons/icon-32-light.png",
-                "dark": "icons/icon-32-dark.png",
-                "size": 32
-            }
-        ]
+        "default_popup": "index.html"
     },
     "background": {
         "scripts": ["assets/background.js"]
