--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "path": "^0.12.7",
         "postcss": "^8.4.38",
         "prettier": "^3.2.5",
+        "sass": "^1.77.7",
         "tailwindcss": "^3.4.3",
         "typescript": "^5.4.5",
         "vite": "^5.2.11"
@@ -38,6 +39,7 @@
         "@types/crypto-js": "^4.2.2",
         "crypto-js": "^4.2.0",
         "pinia": "^2.1.7",
+        "sweetalert2": "^11.12.2",
         "toastify-js": "^1.12.0",
         "vue": "^3.4.26",
         "vue-router": "4",
