--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
         "sweetalert2": "^11.12.2",
         "toastify-js": "^1.12.0",
         "vue": "^3.4.26",
+        "vue-draggable-next": "^2.2.1",
         "vue-router": "4",
         "vue-tippy": "v6"
     }
