--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
     "manifest_version": 3,
-    "name": "Tab Guardian",
-    "description": "Browser extension that allows you to save and restore your tabs including encrypting them with a password",
+    "name": "__MSG_ext_name__",
+    "description": "__MSG_ext_description__",
     "permissions": ["storage", "tabs"],
     "default_locale": "en_US",
     "version": "1.5.1",
