--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "@types/chrome": "^0.0.267",
         "@types/firefox-webext-browser": "^120.0.3",
         "@types/toastify-js": "^1.12.3",
+        "@types/crypto-js": "^4.2.2",
         "@vitejs/plugin-vue": "^5.0.4",
         "autoprefixer": "^10.4.19",
         "fs": "^0.0.1-security",
@@ -31,11 +32,11 @@
         "sass": "^1.77.7",
         "tailwindcss": "^3.4.3",
         "typescript": "^5.4.5",
-        "vite": "^5.2.11"
+        "vite": "^5.2.11",
+        "vite-plugin-static-copy": "^2.2.0"
     },
     "author": "Serhii Cho",
     "dependencies": {
-        "@types/crypto-js": "^4.2.2",
         "crypto-js": "^4.2.0",
         "emoji-regex": "^10.4.0",
         "pinia": "^2.1.7",
