--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
     },
     "devDependencies": {
         "@types/chrome": "^0.0.267",
+        "@types/crypto-js": "^4.2.2",
         "@types/firefox-webext-browser": "^120.0.3",
         "@types/toastify-js": "^1.12.3",
-        "@types/crypto-js": "^4.2.2",
         "@vitejs/plugin-vue": "^5.0.4",
         "autoprefixer": "^10.4.19",
         "fs": "^0.0.1-security",
@@ -39,6 +39,7 @@
     "dependencies": {
         "crypto-js": "^4.2.0",
         "emoji-regex": "^10.4.0",
+        "moment": "^2.30.1",
         "pinia": "^2.1.7",
         "sweetalert2": "^11.12.2",
         "toastify-js": "^1.12.0",
