--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,7 +3,7 @@
     "name": "__MSG_ext_name__",
     "description": "__MSG_ext_description__",
     "permissions": ["storage", "tabs"],
-    "default_locale": "en_US",
+    "default_locale": "en",
     "version": "1.8.0",
     "web_accessible_resources": [
         {
