--- a/public/manifest3.json
+++ b/public/manifest3.json
@@ -1,16 +1,15 @@
 {
-    "manifest_version": 2,
+    "manifest_version": 3,
     "name": "__MSG_ext_name__",
     "description": "__MSG_ext_description__",
+    "permissions": ["storage", "tabs"],
     "default_locale": "en",
     "version": "1.8.0",
     "web_accessible_resources": [
-        "icons/*",
-        "assets/*"
-    ],
-    "permissions": [
-        "storage",
-        "tabs"
+        {
+            "resources": ["icons/*", "assets/*"],
+            "matches": ["<all_urls>"]
+        }
     ],
     "icons": {
         "32": "icons/icon-32.png",
@@ -18,17 +17,15 @@
         "64": "icons/icon-64.png",
         "128": "icons/icon-128.png"
     },
-    "browser_action": {
-        "default_icon": {
+    "action": {
+		"default_icon": {
             "32": "icons/icon-32.png",
             "48": "icons/icon-48.png"
         },
-        "default_title": "Tab Guardian",
+		"default_title": "Tab Guardian",
         "default_popup": "index.html"
     },
     "background": {
-        "scripts": [
-            "assets/background.js"
-        ]
+        "service_worker": "assets/background.js"
     }
 }
