--- a/public/manifest2.json
+++ b/public/manifest2.json
@@ -27,8 +27,7 @@
         "default_popup": "index.html"
     },
     "background": {
-        "scripts": [
-            "assets/background.js"
-        ]
+        "scripts": ["assets/background.js"],
+        "type": "module"
     }
 }
