--- a/public/manifest3.json
+++ b/public/manifest3.json
@@ -26,6 +26,7 @@
         "default_popup": "index.html"
     },
     "background": {
-        "service_worker": "assets/background.js"
+        "service_worker": "assets/background.js",
+        "type": "module"
     }
 }
