chore: improve build script readability

--- a/scripts/build
+++ b/scripts/build
@@ -1,6 +1,10 @@
 #!/usr/bin/env bash
 set -euo pipefail
 
+# ============================================================================
+# Functions Definitions
+# ============================================================================
+
 show_help () {
     echo "Usage:"
     echo "  $0 [OPTION...]"
@@ -58,6 +62,10 @@ build_zip_archive () {
     echo "✅ DONE: archived: $ZIP_NAME"
 }
 
+# ============================================================================
+# Reading and Settings Flag
+# ============================================================================
+
 verbose=0
 help=0
 only_firefox=0
@@ -81,6 +89,10 @@ for arg in "$@"; do
         only_chrome=1
     fi
 done
+
+# ============================================================================
+# Program's Logic
+# ============================================================================
 
 # Display help message if --help is set
 if [ $help -eq 1 ]; then
