--- a/scripts/build
+++ b/scripts/build
@@ -36,7 +36,7 @@ build_zip_archive () {
     ZIP_NAME="$PLATFORM_NAME.zip"
     MANIFEST_PATH="./public/$2"
 
-    if [ ! -f "$MANIFEST_PATH" ]; then
+    if [[ ! -f "$MANIFEST_PATH" ]]; then
         echo "Manifest file `$MANIFEST_PATH` not found for $PLATFORM_NAME"
         return
     fi
@@ -46,7 +46,7 @@ build_zip_archive () {
     # Rename versionaled manifest to a regular manifest.json
     mv "$MANIFEST_PATH" "$REGULAR_MANIFEST_PATH"
 
-    if [ $verbose -eq 1 ]; then
+    if [[ $verbose -eq 1 ]]; then
         podman-compose exec app npm run build
     else
         podman-compose exec app npm run build >/dev/null 2>&1
@@ -54,7 +54,7 @@ build_zip_archive () {
 
     echo "✅ DONE: npm run build"
 
-    if [ $verbose -eq 1 ]; then
+    if [[ $verbose -eq 1 ]]; then
         cd dist && zip -r ../"$ZIP_NAME" . && cd -
     else
         cd dist && zip -r ../"$ZIP_NAME" . >/dev/null 2>&1 && cd - >/dev/null 2>&1
@@ -70,15 +70,25 @@ start_container_if_needed () {
     podman_exists=$(command -v podman-compose)
     docker_exists=$(command -v docker)
 
-    if [ "$podman_exists" ]; then
-        echo "🦦 Starting a Podman container..."
-        # podman-compose up -d
+    if [[ -n "$podman_exists" ]]; then
+        is_running=$(podman ps | grep -E 'Up\s[0-9]+\s' || true)
+
+        if [[ -z "$is_running" ]]; then
+            echo "🦦 Starting a Podman container..."
+            podman-compose up -d >/dev/null
+        fi
+
         return
     fi
 
-    if [ "$docker_exists" ]; then
-        echo "🐋 Starting a Docker container..."
-        # docker compose up -d
+    if [[ -n "$docker_exists" ]]; then
+        is_running=$(docker ps | grep -E 'Up\s[0-9]+\s' || true)
+
+        if [[ -z "$is_running" ]]; then
+            echo "🐋 Starting a Docker container..."
+            docker compose up -d >/dev/null
+        fi
+
         return
     fi
 
@@ -96,19 +106,19 @@ only_chrome=0
 
 # Parse command-line arguments
 for arg in "$@"; do
-    if [ "$arg" == "--verbose" ]; then
+    if [[ "$arg" == "--verbose" ]]; then
         verbose=1
     fi
 
-    if [ "$arg" == "--help" ]; then
+    if [[ "$arg" == "--help" ]]; then
         help=1
     fi
 
-    if [ "$arg" == "--firefox" ]; then
+    if [[ "$arg" == "--firefox" ]]; then
         only_firefox=1
     fi
 
-    if [ "$arg" == "--chrome" ]; then
+    if [[ "$arg" == "--chrome" ]]; then
         only_chrome=1
     fi
 done
@@ -118,23 +128,22 @@ done
 # ============================================================================
 
 # Display help message if --help is set
-if [ $help -eq 1 ]; then
+if [[ $help -eq 1 ]]; then
     show_help
     exit 0
 fi
 
 start_container_if_needed
-exit 1
 
-if [ $only_firefox -eq 0 ] && [ $only_chrome -eq 0 ]; then
-    echo "No platform specified, building both extensions.."
+if [[ $only_firefox -eq 0 ]] && [[ $only_chrome -eq 0 ]]; then
+    echo "🔨 No platform specified, building both extensions..."
 
     build_zip_archive "firefox" "manifest2.json"
     build_zip_archive "chrome" "manifest3.json"
     build_source_zip_archive
-elif [ $only_firefox -eq 1 ]; then
+elif [[ $only_firefox -eq 1 ]]; then
     build_zip_archive "firefox" "manifest2.json"
-elif [ $only_chrome -eq 1 ]; then
+elif [[ $only_chrome -eq 1 ]]; then
     build_zip_archive "chrome" "manifest3.json"
 fi
 
