--- a/scripts/build
+++ b/scripts/build
@@ -1,33 +1,47 @@
 #!/usr/bin/env bash
 set -euo pipefail
 
+exit 1
+
+verbose=0
+help=0
+only_firefox=0
+only_chrome=0
+local_build=0
+container_exec="podman-compose"
+
+help_text=$(cat <<EOF
+Builds and wraps the source code into firefox.zip, chrome.zip and source.zip
+files that later can be used to upload extensions to Chrome and Mozilla stores
+or test them in the browser.
+
+By default, it uses container engines like Podman and Docker to compile assets.
+If you want to use locally installed "npm", you need to pass "--local" flag.
+
+Usage:
+  $0 [OPTION...]
+
+Options:
+  --verbose        Enable verbose mode
+  --help           Show help options
+  --firefox        Build only Firefox extension
+  --chrome         Build only Chrome extension
+  --local          Use local "npm" instead of Podman and Docker
+EOF
+)
+
 # ============================================================================
 # Functions Definitions
 # ============================================================================
 
-show_help () {
-    echo "Builds and wraps the source code into firefox.zip, chrome.zip and"
-    echo "source.zip files that later can be used to upload extensions to"
-    echo "Chrome and Mozilla stores or test them in the browser."
-    echo ""
-    echo "Usage:"
-    echo "  $0 [OPTION...]"
-    echo ""
-    echo "Options:"
-    echo "  --verbose        Enable verbose mode"
-    echo "  --help           Show help options"
-    echo "  --firefox        Build only Firefox extension"
-    echo "  --chrome         Build only Chrome extension"
-}
-
 build_source_zip_archive () {
     ZIP_NAME="source.zip"
 
-    echo "⏳ Zippping $ZIP_NAME..."
+    echo "⏳ LOADING: archiving $ZIP_NAME..."
 
     zip -r "$ZIP_NAME" . -x "node_modules/*" ".git/*" >/dev/null 2>&1
 
-    echo "✅ DONE: archived: $ZIP_NAME"
+    echo "  ✅ SUCCESS: archived: $ZIP_NAME"
 }
 
 build_zip_archive () {
@@ -41,18 +55,10 @@ build_zip_archive () {
         return
     fi
 
-    echo "⏳ Zippping $ZIP_NAME..."
+    echo "⏳ LOADING: archiving $ZIP_NAME..."
 
     # Rename versionaled manifest to a regular manifest.json
     mv "$MANIFEST_PATH" "$REGULAR_MANIFEST_PATH"
-
-    if [[ $verbose -eq 1 ]]; then
-        podman-compose exec app npm run build
-    else
-        podman-compose exec app npm run build >/dev/null 2>&1
-    fi
-
-    echo "✅ DONE: npm run build"
 
     if [[ $verbose -eq 1 ]]; then
         cd dist && zip -r ../"$ZIP_NAME" . && cd -
@@ -63,10 +69,14 @@ build_zip_archive () {
     # Rename regular manifest.json back to a versioned
     mv "$REGULAR_MANIFEST_PATH" "$MANIFEST_PATH" 
 
-    echo "✅ DONE: archived: $ZIP_NAME"
+    echo "  ✅ SUCCESS: archived: $ZIP_NAME"
 }
 
 start_container_if_needed () {
+    if [[ $local_build -eq 1 ]]; then
+        return
+    fi
+
     podman_exists=$(command -v podman-compose)
     docker_exists=$(command -v docker)
 
@@ -74,7 +84,7 @@ start_container_if_needed () {
         is_running=$(podman ps | grep -E 'Up\s[0-9]+\s' || true)
 
         if [[ -z "$is_running" ]]; then
-            echo "🦦 Starting a Podman container..."
+            echo "⏳ LOADING: starting a Podman container..."
             podman-compose up -d >/dev/null
         fi
 
@@ -83,26 +93,58 @@ start_container_if_needed () {
 
     if [[ -n "$docker_exists" ]]; then
         is_running=$(docker ps | grep -E 'Up\s[0-9]+\s' || true)
+        container_exec="docker compose"
 
         if [[ -z "$is_running" ]]; then
-            echo "🐋 Starting a Docker container..."
+            echo "⏳ LOADING: starting a Docker container..."
             docker compose up -d >/dev/null
         fi
 
         return
     fi
 
-    echo "❌ ERROR: You need to have `podman-compose` or `docker` to run this script"
+    echo "❌ FAILURE: you need to have 'podman-compose' or 'docker' to run"
+    echo "   this script. You can also provide '--local' flag to compile"
+    echo "   assets locally with 'npm'."
+EOF
+}
+
+compile_assets_locally () {
+    echo "  ⏳ LOADING: compiling assets 'npm run build'..."
+
+    if [[ $verbose -eq 1 ]]; then
+        npm run build
+    else
+        npm run build >/dev/null 2>&1
+    fi
+
+    echo "  ✅ SUCCESS: 'npm run build'"
+}
+
+compile_assets_with_containers () {
+    echo "  ⏳ LOADING: compiling assets with '$container_exec'..."
+
+    if [[ $verbose -eq 1 ]]; then
+        $container_exec exec app npm run build
+    else
+        $container_exec exec app npm run build >/dev/null 2>&1
+    fi
+
+    echo "  ✅ SUCCESS: 'npm run build'"
+}
+
+compile_assets () {
+    if [[ $local_build -eq 1 ]]; then
+        compile_assets_locally
+        return
+    fi
+
+    compile_assets_with_containers
 }
 
 # ============================================================================
 # Reading and Settings Flag
 # ============================================================================
-
-verbose=0
-help=0
-only_firefox=0
-only_chrome=0
 
 # Parse command-line arguments
 for arg in "$@"; do
@@ -121,6 +163,10 @@ for arg in "$@"; do
     if [[ "$arg" == "--chrome" ]]; then
         only_chrome=1
     fi
+
+    if [[ "$arg" == "--local" ]]; then
+        local_build=1
+    fi
 done
 
 # ============================================================================
@@ -129,14 +175,16 @@ done
 
 # Display help message if --help is set
 if [[ $help -eq 1 ]]; then
-    show_help
+    echo "$help_text"
     exit 0
 fi
 
 start_container_if_needed
+compile_assets
 
 if [[ $only_firefox -eq 0 ]] && [[ $only_chrome -eq 0 ]]; then
-    echo "🔨 No platform specified, building both extensions..."
+    echo "⏳ LOADING: no platform specified with a flag."
+    echo "   Building both Firefox and Chrome..."
 
     build_zip_archive "firefox" "manifest2.json"
     build_zip_archive "chrome" "manifest3.json"
