--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,7 +2,8 @@ name: Build and Release
 
 on:
     push:
-        branches: [master]
+        tags:
+            - '*'
 
 permissions:
     contents: write
@@ -41,7 +42,6 @@ jobs:
 
             - name: 🚀 Create GitHub Release
               uses: softprops/action-gh-release@v2
-              if: startsWith(github.ref, 'refs/tags/')
               with:
                 token: ${{ secrets.CUSTOM_GITHUB_TOKEN }}
                 files: |
