chore: change ga script

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,8 +1,7 @@
 name: Build and Release
 
 on:
-    push:
-        branches: [master]
+    push
 
 permissions:
     contents: write
@@ -38,6 +37,7 @@ jobs:
 
             - name: 🚀 Create GitHub Release
               uses: softprops/action-gh-release@v2
+              if: github.ref_type == 'tag'
               with:
                 files: |
                   firefox.zip
