--- a/package.json
+++ b/package.json
@@ -19,9 +19,10 @@
     },
     "devDependencies": {
         "@types/chrome": "^0.0.267",
-        "@types/firefox": "^0.0.34",
         "@types/crypto-js": "^4.2.2",
+        "@types/firefox": "^0.0.34",
         "@types/firefox-webext-browser": "^120.0.3",
+        "@types/slug": "^5.0.9",
         "@types/toastify-js": "^1.12.3",
         "@vitejs/plugin-vue": "^5.0.4",
         "autoprefixer": "^10.4.19",
@@ -41,6 +42,7 @@
         "emoji-regex": "^10.4.0",
         "moment": "^2.30.1",
         "pinia": "^2.1.7",
+        "slug": "^11.0.0",
         "sweetalert2": "^11.12.2",
         "toastify-js": "^1.12.0",
         "vue": "^3.5.13",
