--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "author": "Serhii Cho",
     "dependencies": {
         "crypto-js": "^4.2.0",
+        "emoji-picker-element": "^1.26.3",
         "emoji-regex": "^10.4.0",
         "moment": "^2.30.1",
         "pinia": "^2.1.7",
