--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
 # Set the locale for the application in the development environment.
 # Choices: ru, zh, en
 VITE_DEV_LOCALE=en
+
+# Currect Encryption Algorithm to use for WEB Crypto API
+VITE_CURR_ENCRYPT_ALGO=AES-GCM
