--- a/public/manifest3.json
+++ b/public/manifest3.json
@@ -2,7 +2,10 @@
     "manifest_version": 3,
     "name": "__MSG_ext_name__",
     "description": "__MSG_ext_description__",
-    "permissions": ["storage", "tabs"],
+    "permissions": [
+        "storage",
+        "tabs"
+    ],
     "default_locale": "en",
     "version": "1.12.0",
     "web_accessible_resources": [
@@ -12,7 +15,9 @@
                 "sounds/*",
                 "assets/*"
             ],
-            "matches": ["<all_urls>"]
+            "matches": [
+                "<all_urls>"
+            ]
         }
     ],
     "icons": {
