feat: add minimum pass length of 6 chars
closes #63

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,6 @@ VITE_DEV_LOCALE=en
 
 # Currect Encryption Algorithm to use for WEB Crypto API
 VITE_CURR_ENCRYPT_ALGO=AES-GCM
+
+# Minimum password length for private groups
+VITE_MIN_PASS_LENGTH=6
