--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,11 @@ VITE_CURR_ENCRYPT_ALGO=AES-GCM
 
 # Minimum password length for private groups
 VITE_MIN_PASS_LENGTH=6
+
+# How many attempts users have to enter correct password
+# to unlock a private group
+VITE_PASS_MAX_ATTEMPTS=5
+
+# How much minutes user must wait in order to make
+# another password attempt to unlock a private group
+VITE_PASS_LOCK_DURATION=10
