--- a/package.json
+++ b/package.json
@@ -15,14 +15,15 @@
         "dev": "vite --host",
         "build": "vite build",
         "prettier": "prettier ./src --write",
-        "prettier-check": "prettier ./src --check"
+        "prettier-check": "prettier ./src --check",
+        "type-check": "vue-tsc --noEmit"
     },
     "devDependencies": {
         "@types/chrome": "^0.0.267",
-        "@types/lodash": "^4.17.20",
         "@types/crypto-js": "^4.2.2",
         "@types/firefox": "^0.0.34",
         "@types/firefox-webext-browser": "^120.0.3",
+        "@types/lodash": "^4.17.20",
         "@types/slug": "^5.0.9",
         "@types/toastify-js": "^1.12.3",
         "@vitejs/plugin-vue": "^5.0.4",
@@ -35,7 +36,8 @@
         "tailwindcss": "^3.4.3",
         "typescript": "^5.4.5",
         "vite": "^5.2.11",
-        "vite-plugin-static-copy": "^2.2.0"
+        "vite-plugin-static-copy": "^2.2.0",
+        "vue-tsc": "^3.1.0"
     },
     "author": "Serhii Cho",
     "dependencies": {
