--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "@types/lodash": "^4.17.20",
         "@types/slug": "^5.0.9",
         "@types/toastify-js": "^1.12.3",
+        "@types/pako": "^2.0.4",
         "@vitejs/plugin-vue": "^5.0.4",
         "autoprefixer": "^10.4.19",
         "fs": "^0.0.1-security",
@@ -46,6 +47,7 @@
         "emoji-regex": "^10.4.0",
         "lodash": "^4.17.21",
         "moment": "^2.30.1",
+        "pako": "^2.1.0",
         "pinia": "^2.1.7",
         "slug": "^11.0.0",
         "sweetalert2": "^11.12.2",
