--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
         "emoji-regex": "^10.4.0",
         "lodash": "^4.17.21",
         "moment": "^2.30.1",
+        "npm": "^11.6.2",
         "pako": "^2.1.0",
         "pinia": "^2.1.7",
         "slug": "^11.0.0",
