refactor: importing locales for web runtime

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,8 @@
           "@/*": ["popup/*"],
           "@bg/*": ["background/*"],
           "@settings/*": ["settings/*"],
-          "@common/*": ["common/*"]
+          "@common/*": ["common/*"],
+          "@locales/*": ["_locales/*"]
       }
     },
     "include": [
