--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -2,9 +2,9 @@ name: Tests
 
 on:
     push:
-        branches: ["master"]
+        branches: [ master ]
     pull_request:
-        branches: ["master"]
+        branches: [ master ]
 
 jobs:
     test:
@@ -17,8 +17,11 @@ jobs:
         - name: Set up Node.js
           uses: actions/setup-node@v3
           with:
-            node-version: '20.x'
-            cache: 'npm' # Cache npm dependencies
+            node-version: 20.x
+            cache: npm
+
+        - name: Create .env file
+          run: cp .env.example .env
 
         - name: Install dependencies
           run: npm install
