--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Tests
+name: Main
 
 on:
     push:
@@ -11,7 +11,7 @@ jobs:
         runs-on: ubuntu-latest
 
         steps:
-        - name: Checkout code
+        - name: Checkout Code
           uses: actions/checkout@v4
 
         - name: Set up Node.js
@@ -20,11 +20,17 @@ jobs:
             node-version: 20.x
             cache: npm
 
-        - name: Create .env file
+        - name: Create .env File
           run: cp .env.example .env
 
-        - name: Install dependencies
+        - name: Install Dependencies
           run: npm install
 
-        - name: Run tests
+        - name: Run Vitest Tests
           run: npm run test run
+
+        - name: Run TypeScript Check
+          run: npm run check
+
+        - name: Run Prettier Check
+          run: npm run prettier
