--- a/package.json
+++ b/package.json
@@ -59,6 +59,6 @@
         "vue": "^3.5.13",
         "vue-draggable-next": "^2.2.1",
         "vue-router": "4",
-        "vue-tippy": "v6"
+        "vue-tippy": "^6.7.1"
     }
 }
