chore: update package.json file to latest versions

--- a/package.json
+++ b/package.json
@@ -18,46 +18,49 @@
         "prettier-check": "prettier ./src --check",
         "test": "vitest",
         "check": "vue-tsc --noEmit",
-        "all": "npm run check && npm run prettier && npm run test run"
+        "all": "npm run check && npm run prettier && npm run test run",
+        "check-updates": "npm-check-updates",
+        "do-updates": "npm-check-updates -u"
     },
     "devDependencies": {
-        "@tailwindcss/vite": "^4.1.17",
-        "@types/chrome": "^0.0.267",
+        "@tailwindcss/vite": "^4.1.18",
+        "@types/chrome": "^0.1.33",
         "@types/crypto-js": "^4.2.2",
         "@types/firefox": "^0.0.34",
-        "@types/firefox-webext-browser": "^120.0.3",
-        "@types/lodash": "^4.17.20",
+        "@types/firefox-webext-browser": "^143.0.0",
+        "@types/lodash": "^4.17.23",
         "@types/pako": "^2.0.4",
         "@types/slug": "^5.0.9",
-        "@types/toastify-js": "^1.12.3",
-        "@vitejs/plugin-vue": "^6.0.2",
+        "@types/toastify-js": "^1.12.4",
+        "@vitejs/plugin-vue": "^6.0.3",
         "@vue/test-utils": "^2.4.6",
-        "autoprefixer": "^10.4.19",
+        "autoprefixer": "^10.4.23",
         "fs": "^0.0.1-security",
-        "happy-dom": "^20.0.2",
+        "happy-dom": "^20.3.1",
+        "npm-check-updates": "^19.3.1",
         "path": "^0.12.7",
         "postcss": "^8.5.6",
-        "prettier": "^3.2.5",
-        "tailwindcss": "^4.1.17",
+        "prettier": "^3.8.0",
+        "tailwindcss": "^4.1.18",
         "typescript": "^5.9.3",
-        "vite": "^7.2.6",
+        "vite": "^7.3.1",
         "vite-plugin-static-copy": "^3.1.4",
-        "vitest": "^4.0.15",
-        "vue-tsc": "^3.1.5"
+        "vitest": "^4.0.17",
+        "vue-tsc": "^3.2.2"
     },
     "author": "Serhii Cho",
     "dependencies": {
         "crypto-js": "^4.2.0",
-        "emoji-picker-element": "^1.26.3",
-        "emoji-regex": "^10.4.0",
+        "emoji-picker-element": "^1.28.1",
+        "emoji-regex": "^10.6.0",
         "lodash": "^4.17.21",
         "moment": "^2.30.1",
         "pako": "^2.1.0",
-        "pinia": "^2.1.7",
-        "slug": "^11.0.0",
+        "pinia": "^3.0.4",
+        "slug": "^11.0.1",
         "toastify-js": "^1.12.0",
-        "vue": "^3.5.25",
-        "vue-draggable-next": "^2.2.1",
+        "vue": "^3.5.26",
+        "vue-draggable-next": "^2.3.0",
         "vue-router": "4",
         "vue-tippy": "^6.7.1"
     }
